# metrics

./: .dockerignore  .gitignore  Dockerfile.rocm  README.md  docker-compose.yaml  metrics.py  pyproject.toml
.github/workflows/: ruff.yml
scripts/: __init__.py  encode.py  metrics.py  plot.py  scores.py  stats.py
