[project]
name = "metrics"
version = "0.1.0"
description = "Run metrics given a source video &amp; a distorted video."
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "argparse>=1.4.0",
    "matplotlib>=3.10.0",
    "statistics>=1.0.3.5",
    "tqdm>=4.67.1",
    "vapoursynth>=70",
    "vstools>=3.3.4",
]
