[project]
name = "metrics"
version = "0.1.0"
description = "Run metrics given a source video &amp; a distorted video."
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "argparse>=1.4.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scipy>=1.15.1",
    "statistics>=1.0.3.5",
    "tqdm>=4.67.1",
    "vapoursynth>=70",
    "vstools>=3.3.4",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# specify root package dir
package-dir = { "" = "scripts" }


[project.scripts]
stats = "stats:main"
plot = "plot:main"
scores = "scores:main"
encode = "encode:main"
